--- a/content/blog.njk
+++ b/content/blog.njk
@@ -6,5 +6,5 @@ eleventyNavigation:
   emoji: 📝
   order: 3
 ---
-{% extends "layouts/list.njk" %}
+{% extends "pages/list.njk" %}
 {% set postslist = collections.posts %}
