--- a/content/experiments.njk
+++ b/content/experiments.njk
@@ -1,5 +1,10 @@
 ---
-
+title: Experiments
+emoji: 🧪
+eleventyNavigation:
+  key: Experiments
+  emoji: 🧪
+  order: 4
 ---
-{% extends "layouts/list.njk" %}
+{% extends "pages/list.njk" %}
 {% set postslist = collections.experiments %}
