--- a/structure/components/buttonwall.njk
+++ b/structure/components/buttonwall.njk
@@ -83,7 +83,7 @@
 	</ul>
 </section>
 
-{% block scriptsContent %}
+{% block scripts %}
     <script>
         const t = document.getElementById('toggleHighContrast')
         const w = document.querySelectorAll('.buttonwall')
