--- a/structure/core/_template-start.njk
+++ b/structure/core/_template-start.njk
@@ -1,4 +1,4 @@
 <!doctype html>
 <html lang="{{ metadata.language }}">
 
-{% include "_includes/core/_head.njk" %}
+{% include "structure/core/_head.njk" %}
