--- a/content/not_found.njk
+++ b/content/not_found.njk
@@ -1,14 +1,13 @@
 ---
 title: 404
 ---
-{% extends 'layouts/page.njk'%}
+{% extends 'structure/templates/page.njk'%}
 
-{%- block leftContent -%}
-	{{ macro.header(title) }}
+{%- block left -%}
 {%- endblock -%}
 
 
-{%- block mainContent -%}
+{%- block main -%}
 <section>
 	<div class="reading-width">
 		<p>Page not found</p>
@@ -17,5 +16,5 @@ title: 404
 
 {%- endblock -%}
 
-{%- block scriptsContent -%}
+{%- block scripts -%}
 {%- endblock -%}
