--- a/structure/core/_head.njk
+++ b/structure/core/_head.njk
@@ -9,4 +9,5 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link href="/css/main.css" rel="stylesheet">
     <link rel="preload" as="font" href="/fonts/atkinson-hyperlegible/regular.woff2" crossorigin>
+    {% block head %}{% endblock %}
 </head>
