--- a/content/experiments.njk
+++ b/content/experiments.njk
@@ -6,5 +6,5 @@ eleventyNavigation:
   emoji: 🧪
   order: 4
 ---
-{% extends "pages/list.njk" %}
+{% extends "structure/pages/list-experiments.njk" %}
 {% set postslist = collections.experiments %}
