--- a/content/index.njk
+++ b/content/index.njk
@@ -7,9 +7,9 @@ title: Welcome to Frill's internet realm
 <div class="bio">
 	<img class="bio-pic" src="/images/pic.png" alt="Black and white avatar illustration: a smiling woman with shoulder length dark hair, large eyes and sparkles surrounding her">
 	<ul class="unstyled">
-		<li><span class="emoji" aria-hidden="true">🌷</span> she/her</li>
-		<li> <span class="emoji" role="img" aria-label="Location">📍</span> Wales, UK</li>
-		<li><span class="emoji" role="img" aria-label="Clock">⏰</span> <span id="localTime" class="lowercase" title="British Summer Time">12:00pm</span> (utc+1)</li>
+		<li><span class="emoji" role="img" aria-label="Pronouns">🌷</span> she/her</li>
+		<li><span class="emoji" role="img" aria-label="Location">📍</span> Wales, UK</li>
+		<li><span class="emoji" role="img" aria-label="Local time">⏰</span> <span id="localTime" class="lowercase" title="British Summer Time">12:00pm</span> (utc+1)</li>
 		<li><span class="emoji" role="img" aria-label="Sun sign">🌞</span> Gemini</li>
 		<li><span role="img" class="emoji" aria-label="Moon sign">🌚</span> Scorpio</li>
 	</ul>
