--- a/structure/pages/item-experiment.njk
+++ b/structure/pages/item-experiment.njk
@@ -1,13 +1,15 @@
-{% extends "structure/templates/page.njk" %}
+{% extends "structure/templates/page-full.njk" %}
 
-{%- block main -%}
-    <article class="full-width">
-        {{ content | safe }}
-    </article>
-{%- endblock -%}
+{% block main %}
+    {{ content | safe }}
+{% endblock %}
 
-{%- block right -%}
-{%- endblock -%}
+{% if bottom %}
+<div class="grid grid--offset pt-2">
+    {% block bottom %}
+    {% endblock %}
+</div>
+{% endif %}
 
 {% block scripts %}
 {% endblock %}
