--- a/content/blog.njk
+++ b/content/blog.njk
@@ -6,5 +6,5 @@ eleventyNavigation:
   emoji: 📝
   order: 3
 ---
-{% extends "pages/list.njk" %}
+{% extends "structure/pages/list-blog.njk" %}
 {% set postslist = collections.posts %}
