--- a/content/experiments/change-background-colour-with-range-input.njk
+++ b/content/experiments/change-background-colour-with-range-input.njk
@@ -1,6 +1,6 @@
 ---
 title: Changing background colour with range input
-description: Using Javascript to change the hue value of HSL colours
+description: Use the range input to change the colour of the background
 date: 2023-08
 tags:
 - javascript
@@ -47,16 +47,18 @@ tags:
 </style>
 {% endblock %}
 
+{% block main %}
 <div class="changebgcolour">
   <div class="inputwrap">
     <label for="hslRange">Change background colour</label>
     <input type="range" id="hslRange" min="0" max="360" step="1" />
   </div>
 </div>
+{% endblock %}
 
-{%- block scripts -%}
+{% block scripts %}
 <script>
-  (function () {
+  document.addEventListener("DOMContentLoaded", () => {
     document.body.innerHTML += `<style id="hslVariable"></style>`
     const range = document.getElementById("hslRange")
     const style = document.getElementById("hslVariable")
@@ -66,6 +68,6 @@ tags:
       hue = range.value
       style.innerHTML = `:root{--hue: ${hue};`
     })
-  })();
+  });
 </script>
-{%- endblock -%}
+{% endblock %}
