--- a/content/links.njk
+++ b/content/links.njk
@@ -5,24 +5,22 @@ description:
 eleventyNavigation:
   key: Links
   emoji: 🔗
-  order: 4
+  order: 3
 ---
-{% extends 'layouts/page.njk'%}
+{% extends 'structure/templates/page.njk'%}
 
-{%- block leftContent -%}
+{%- block left -%}
 {%- endblock -%}
 
-{%- block mainContent -%}
+{%- block main -%}
 <section>
-	{{ macro.header(title, description ) }}
-    {% include "_includes/_components/buttonwall.njk" %}
+    {% include "structure/components/buttonwall.njk" %}
 </section>
 {%- endblock -%}
 
-{%- block rightContent -%}
-    {% include "_includes/_components/button.njk" %}
+{%- block right -%}
+    {% include "structure/components/button.njk" %}
 {%- endblock -%}
 
-{% block scriptsContent %}
-
+{% block scripts %}
 {% endblock %}
