--- a/structure/components/buttonwall.njk
+++ b/structure/components/buttonwall.njk
@@ -32,7 +32,7 @@
 			<a target="_blank" href="https://jessicajournals.com" class="buttonwall__item" style="font-size: 10px; background-color: #1e1e2e; color: #A5E3A1; background-image: linear-gradient(to left, #181825, #1e1e2e)">jessica journals</a>
 		</li>
 		<li>
-			<a target="_blank" href="https://sleepydev.neocities.org" class="buttonwall__item" style="font-size: 13px; background-color: #f9f9f9; color: blueviolet;">sleepydev</a>
+			<a target="_blank" href="https://sleepydev.neocities.org" class="buttonwall__item" style="font-size: 13px; background-color: #f9f9f9; color: blueviolet;">sleepy dev</a>
 		</li>
 		<li>
 			<a target="_blank" href="https://10kph.neocities.org" class="buttonwall__item" style="font-size: 14px; background-color: #1c1e26; color: #e95678;">10kph</a>
@@ -41,13 +41,13 @@
 			<a target="_blank" href="https://maria.town" class="buttonwall__item" style="font-size: 13px; background-color: #1f2d39; color: #96d1a0;">maria</a>
 		</li>
 		<li>
-			<a target="_blank" href="https://daintye.co" class="buttonwall__item" style="font-size: 13px; background-color: white; color: #ff9dc9;">daintyeco</a>
+			<a target="_blank" href="https://daintye.co" class="buttonwall__item" style="font-size: 13px; background-color: white; color: #ff9dc9;">dainty eco</a>
 		</li>
 		<li>
 			<a target="_blank" href="https://hillhouse.neocities.org" class="buttonwall__item" style="font-size: 13px; background-color: #ffccdd; color: #ab6c84;">hillhouse</a>
 		</li>
 		<li>
-			<a target="_blank" href="https://jasm1nii.neocities.org" class="buttonwall__item" style="font-size: 12px; background-color: #E6E6FA; color: #9370DB;">jasmine's journal</a>
+			<a target="_blank" href="https://jasm1nii.ichi.city" class="buttonwall__item" style="font-size: 12px; background-color: #E6E6FA; color: #9370DB;">jasmine's journal</a>
 		</li>
 		<li>
 			<a target="_blank" href="https://pinkvampyr.neocities.org" class="buttonwall__item" style="font-size: 12px; background-color: #1C1C1C; color: #FF8FCB;">pinkvampyr</a>
