--- a/content/experiments/change-background-colour-with-range-input.njk
+++ b/content/experiments/change-background-colour-with-range-input.njk
@@ -48,6 +48,9 @@ tags:
 {% endblock %}
 
 {% block main %}
+<ul class="unstyled inline">
+  <li>🏆 CodePen picked this Pen for the homepage</li>
+</ul>
 <div class="changebgcolour">
   <div class="inputwrap">
     <label for="hslRange">Change background colour</label>
