--- a/content/experiments/css-tarot-card.njk
+++ b/content/experiments/css-tarot-card.njk
@@ -432,6 +432,10 @@ tags:
 {% endblock %}
 
 {% block main %}
+<ul class="unstyled inline">
+  <li>🏆 CodePen picked this Pen for the homepage</li>
+  <li>🏆 CodePen shared this Pen on Instagram</li>
+</ul>
 <div class="csstarot">
   <div class="tarot-card-wrap">
     <div class="tarot-card front">
