✨ Update trophy text

--- a/content/experiments/change-background-colour-with-range-input.njk
+++ b/content/experiments/change-background-colour-with-range-input.njk
@@ -49,7 +49,7 @@ tags:
 
 {% block main %}
 <ul class="unstyled inline">
-  <li>🏆 CodePen picked this Pen for the homepage</li>
+  <li>🏆 CodePen featured this on their homepage</li>
 </ul>
 <div class="changebgcolour">
   <div class="inputwrap">
