--- a/content/experiments/css-tarot-card.njk
+++ b/content/experiments/css-tarot-card.njk
@@ -433,8 +433,7 @@ tags:
 
 {% block main %}
 <ul class="unstyled inline">
-  <li>🏆 CodePen picked this Pen for the homepage</li>
-  <li>🏆 CodePen shared this Pen on Instagram</li>
+  <li>🏆 CodePen featured this on their homepage and Instagram</li>
 </ul>
 <div class="csstarot">
   <div class="tarot-card-wrap">
