💄 Update About emoji

--- a/content/about.njk
+++ b/content/about.njk
@@ -3,7 +3,7 @@ title: About
 description: There is a rustling noise from behind a bush and you go to investigate. Amidst the leaves, a pair of mischievous brown eyes meet yours. Slowly, a woman emerges from the undergrowth, adorned with tangled brown and blonde hair and grubby gardening attire. You get a waft of earth and soap as she extends her hand in greeting.
 eleventyNavigation:
   key: About
-  emoji: 💁‍♀️
+  emoji: 💁🏻‍♀️
   order: 2
 ---
 {% extends 'structure/templates/page.njk'%}
