--- a/structure/global/footer.njk
+++ b/structure/global/footer.njk
@@ -1,9 +1,10 @@
-<header class="page__footer grid">
+<footer class="page__footer grid">
     <div></div>
-    <nav aria-label="Top level" class="page__nav">
+    <nav aria-label="Footer" class="page__nav">
         <ul>
             <li>♿ <a href="/accessibility">Accessibility</a>
             <li>👩‍💻 <a href="/site">About the site</a>
+            <li>⬆️ <a href="#top">Back to top</a></li>
         </ul>
     </nav>
-</header>
+</footer>
