--- a/structure/templates/page-full.njk
+++ b/structure/templates/page-full.njk
@@ -1,7 +1,7 @@
 {% extends "structure/core/base.njk" %}
 
 {% block content %}
-<main class="page__main">
+<main class="page__main" id="main">
     <section class="content__main">
         <div class="content__inner">
             <h1>{{title}}</h1>
