--- a/structure/templates/page.njk
+++ b/structure/templates/page.njk
@@ -1,7 +1,7 @@
 {% extends "structure/core/base.njk" %}
 
 {%- block content -%}
-<main class="page__main grid grid--main">
+<main class="page__main grid grid--main" id="main">
     <div class="content__sidebar">
         {%- block left -%}
         {%- endblock %}
