🤡  Add online status

--- a/content/index.njk
+++ b/content/index.njk
@@ -12,6 +12,7 @@ title: Home
 		<li><span class="emoji" role="img" aria-label="Local time">⏰</span> <span id="localTime" class="lowercase" title="British Summer Time">12:00pm</span> (utc+1)</li>
 		<li><span class="emoji" role="img" aria-label="Sun sign">🌞</span> Gemini</li>
 		<li><span role="img" class="emoji" aria-label="Moon sign">🌚</span> Scorpio</li>
+		<li><span role="img" class="emoji" aria-label="Status">🟢</span> Extremely online</li>
 	</ul>
 </div>
 {%- endblock -%}
