🐛  Fix webrings missing from Home

--- a/content/index.njk
+++ b/content/index.njk
@@ -29,7 +29,8 @@ title: Home
 
 {%- block right -%}
 {%- endblock -%}
-{% block bottomContent %}
+
+{% block bottom %}
 <div class="grid grid--main">
 	<div></div>
 	<aside class="webrings pt-1">
