--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -140,7 +140,7 @@ button {
   will-change: transform;
   padding: 6px 12px;
   border-radius: 4px;
-  background-color: var(--accent);
+  background-color: gold;
   color: black;
   border: 0;
   box-shadow: 4px 4px 0 0 DarkGoldenRod;
