--- a/structure/components/buttonwall.njk
+++ b/structure/components/buttonwall.njk
@@ -47,7 +47,7 @@
 			<a target="_blank" href="https://hillhouse.neocities.org" class="buttonwall__item" style="font-size: 13px; background-color: #ffccdd; color: #ab6c84;">hillhouse</a>
 		</li>
 		<li>
-			<a target="_blank" href="https://jasm1nii.ichi.city" class="buttonwall__item" style="font-size: 12px; background-color: #E6E6FA; color: #9370DB;">jasmine's journal</a>
+			<a target="_blank" href="https://jasm1nii.xyz" class="buttonwall__item" style="font-size: 12px; background-color: #E6E6FA; color: #9370DB;">jasmine's journal</a>
 		</li>
 		<li>
 			<a target="_blank" href="https://pinkvampyr.neocities.org" class="buttonwall__item" style="font-size: 12px; background-color: #1C1C1C; color: #FF8FCB;">pinkvampyr</a>
