--- a/content/site.njk
+++ b/content/site.njk
@@ -12,7 +12,7 @@ title: About the site
 		<h2>Technical information</h2>
 		<ul class="stars">
 			<li>Built using <a href="https://www.11ty.dev/" target="_blank">eleventy</a> static site generator</li>
-			<li>Source code is on <a href="https://github.com/CupOfTegan/frills-neocities" target="_blank">Github</a></li>
+			<li>Source code is on Github</li>
 			<li>Hosted on <a href="https://neocities.org" target="_blank">Neocities</a> using the <a href="https://deploy-to-neocities.neocities.org/" target="_blank">deploy to Neocities guide</a></li>
 			<li>Coded in <a href="https://code.visualstudio.com/download" target="_blank">VSCode</a></li>
 			<li>Tested in <a href="https://www.mozilla.org/en-GB/firefox/new/" target="_blank">Firefox</a> on Windows 11 and Mac OS Catalina</li>
@@ -38,9 +38,9 @@ title: About the site
 			<li>Cool things I've done page
 				<ul>
 					<li>Scribble Light on Subtle Patterns</li>
-					<li>CSS Tarot card (3 of swords)</li>
-					<li>CSS Skull</li>
-					<li>Background colour range</li>
+					<li><span class="emoji" role="img" aria-label="Check mark">✅</span> CSS Tarot card (3 of swords)</li>
+					<li><span class="emoji" role="img" aria-label="Check mark">✅</span> CSS Skull</li>
+					<li><span class="emoji" role="img" aria-label="Check mark">✅</span> Background colour range</li>
 					<li>Clients I have developed for. not that this is a work site. just somewhere to rememeber them all</li>
 				</ul>
 			</li>
