--- a/structure/global/header.njk
+++ b/structure/global/header.njk
@@ -6,6 +6,9 @@
     </a>
     {% include "structure/global/nav.njk" %}
     <div class="settings">
+        <button id="colorSchemeButton" class="toggle toggle--colorscheme">
+            Toggle dark theme
+        </button>
         {# <label>
         Light mode
         <input type="checkbox">
