--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,11 @@
 @import url('_font.css');
 @import url('_global.css');
 @import url('_typography.css');
+@import url('_utility.css');
+@import url('_button.css');
+@import url('_logo.css');
+@import url('_toggle.css');
+@import url('_list.css');
 
 img.rounded {
   border-radius: 1rem;
@@ -11,109 +16,9 @@ img.round {
   border-radius: 50%;
 }
 
-ul,
-ol {
-  display: flex;
-  flex-direction: column;
-  padding-left: 16px;
-  row-gap: 8px;
-  margin: 0 0 1rem 0;
-}
-
-ul.unstyled,
-ol.unstyled {
-  list-style-type: none;
-  padding-left: 0;
-}
-
-ul.stars,
-ol.stars {
-  list-style-type: none;
-}
-
-ul.stars li,
-ol.stars li {
-  position: relative;
-}
-
-ul.stars li::before,
-ol.stars li::before {
-  content: '⭐';
-  font-size: 60%;
-  top: 50%;
-  transform: translateY(-50%);
-  position: absolute;
-  left: -1rem;
-}
-
-ul.inline, ol.inline {
-  flex-direction: row;
-  column-gap: 1rem;
-  flex-wrap: wrap;
-}
 
 details summary {
   cursor: pointer;
-}
-
-.pb-1 {
-  padding-bottom: 1rem !important;
-}
-
-.pt-1 {
-  padding-top: 1rem !important;
-}
-
-.py-1 {
-  padding-top: 1rem !important;
-  padding-bottom: 1rem !important;
-}
-
-.pb-2 {
-  padding-bottom: 2rem !important;
-}
-
-.pt-2 {
-  padding-top: 2rem !important;
-}
-
-.py-2 {
-  padding-top: 2rem !important;
-  padding-bottom: 2rem !important;
-}
-
-.mb-1 {
-  margin-bottom: 1rem !important;
-}
-
-.mt-1 {
-  margin-top: 1rem !important;
-}
-
-.my-1 {
-  margin-top: 1rem !important;
-  margin-bottom: 1rem !important;
-}
-
-.mb-2 {
-  margin-bottom: 2rem !important;
-}
-
-.mt-2 {
-  margin-top: 2rem !important;
-}
-
-.my-2 {
-  margin-top: 2rem !important;
-  margin-bottom: 2rem !important;
-}
-
-.reading-width {
-  max-width: 36rem;
-}
-
-.full-width {
-  width: 100%;
 }
 
 p {
@@ -123,79 +28,6 @@ p {
 em {
   font-style: normal;
   color: var(--accent);
-}
-
-/* em::before,
-em::after {
-  content: '✨';
-  content: '✨' / '';
-  speak: never;
-} */
-
-.italic {
-  font-style: italic;
-}
-
-button {
-  will-change: transform;
-  padding: 6px 12px;
-  border-radius: 4px;
-  background-color: gold;
-  color: black;
-  border: 0;
-  box-shadow: 4px 4px 0 0 DarkGoldenRod;
-  cursor: pointer;
-  transition: 0.3s ease transform, 0.3s ease background-color, 0.3s ease box-shadow;
-}
-
-button:hover {
-  background-color: #eec900;
-}
-
-button:active,
-button[aria-pressed="true"] {
-  transform: translate(4px, 4px);
-  box-shadow: 0 0 0 0 DarkGoldenRod;
-}
-
-textarea,
-input,
-select {
-  margin: 0 0 1rem 0;
-}
-
-textarea {
-  border: 1px solid orangered;
-  border-radius: 4px;
-  color: var(--text);
-  background-color: var(--bodybg);
-  padding: 4px 14px;
-  min-height: 5rem;
-}
-
-input {
-  accent-color: orangered;
-}
-
-label {
-  display: block;
-  font-weight: bold;
-}
-
-.visually-hidden:not(:focus):not(:active) {
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  height: 1px;
-  overflow: hidden;
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-}
-
-.visually-hidden.skiptomain {
-  position: absolute;
-  top: 0.5rem;
-  left: 0.5rem;
 }
 
 .callout {
@@ -268,142 +100,6 @@ label {
   }
 }
 
-@keyframes colour {
-  0% {
-    fill: hsl(255, 70%, 70%);
-    stroke: hsl(255, 70%, 70%)
-  }
-
-  10% {
-    fill: hsl(330, 70%, 70%);
-    stroke: hsl(330, 70%, 70%)
-  }
-
-  50% {
-    fill: hsl(10, 100%, 60%);
-    stroke: hsl(10, 100%, 60%)
-  }
-
-  60% {
-    fill: hsl(51, 100%, 60%);
-    stroke: hsl(51, 100%, 60%)
-  }
-
-  80% {
-    fill: hsl(153, 70%, 70%);
-    stroke: hsl(153, 70%, 70%)
-  }
-
-  100% {
-    fill: hsl(204, 70%, 70%);
-    stroke: hsl(204, 70%, 70%)
-  }
-}
-
-@media (prefers-color-scheme: light) {
-  @keyframes colour {
-    0% {
-      fill: hsl(255, 70%, 70%);
-      stroke: hsl(255, 70%, 70%)
-    }
-
-    10% {
-      fill: hsl(330, 100%, 40%);
-      stroke: hsl(330, 100%, 40%)
-    }
-
-    50% {
-      fill: hsl(10, 100%, 50%);
-      stroke: hsl(10, 100%, 50%)
-    }
-
-    60% {
-      fill: hsl(51, 100%, 50%);
-      stroke: hsl(51, 100%, 50%)
-    }
-
-    80% {
-      fill: hsl(153, 100%, 40%);
-      stroke: hsl(153, 100%, 40%)
-    }
-
-    100% {
-      fill: hsl(204, 100%, 50%);
-      stroke: hsl(204, 100%, 50%)
-    }
-
-  }
-}
-
-@keyframes blink {
-  0% {
-    fill: var(--accent);
-  }
-
-  30% {
-    fill: transparent;
-  }
-
-  100% {
-    fill: transparent;
-  }
-}
-
-.logo {
-  max-height: 60px;
-  transform: translateX(15px)
-}
-
-.logo:hover .logo-tx {
-  fill: transparent !important;
-}
-
-@media (min-width: 768px) {
-  .logo {
-    max-width: 200px;
-    max-height: none;
-    transform: none;
-  }
-}
-
-.logo-tx {
-  fill: hsl(330, 70%, 70%);
-  stroke-width: 0;
-  stroke: hsl(330, 70%, 70%)
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .logo-tx {
-    animation: colour 10s 0s linear infinite forwards alternate;
-  }
-
-  .logo:hover .logo-tx {
-    stroke-width: 1px;
-
-  }
-
-  .logo-x {
-    fill: transparent;
-    animation-name: blink;
-    animation-fill-mode: normal;
-    animation-iteration-count: infinite;
-    animation-direction: backwards;
-    animation-duration: 7500ms;
-  }
-
-  .logo-x:nth-child(3) {
-    animation-delay: 1000ms;
-  }
-
-  .logo-x:nth-child(2) {
-    animation-delay: 1850ms;
-  }
-
-  .logo-x:nth-child(1) {
-    animation-delay: 2500ms;
-  }
-}
-
 .page__nav ul {
   display: flex;
   flex-wrap: wrap;
@@ -432,6 +128,7 @@ label {
   position: relative;
   z-index: 1;
 }
+
 .page__nav ul li .notification {
   vertical-align: super;
   background-color: var(--accent);
