--- a/assets/css/_toggle.css
+++ b/assets/css/_toggle.css
@@ -9,6 +9,7 @@
   border: 2px solid white;
   font-size: 0;
   transform: none;
+  display: none;
 }
 
 .toggle:active,
@@ -20,11 +21,11 @@
 .toggle::before {
   content: '';
   left: auto;
-  right: 2px;
+  right: calc(100% - 20px);
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  box-shadow: inset -16px -16px 0 0 white;
+  box-shadow: inset -6px -6px 0 0 white;
   height: 10px;
   width: 10px;
   padding: 1px;
@@ -34,10 +35,10 @@
 
 .toggle::after {
   content: '';
-  height: 12px;
-  width: 12px;
-  background-color: black;
-  border: 2px solid white;
+  height: 14px;
+  width: 14px;
+  background-color: white;
+  border-color: black;
   top: 50%;
   transform: translateY(-50%);
   border-radius: 18px;
@@ -48,22 +49,20 @@
 }
 
 .toggle[aria-pressed='true'] {
-  border-color: black;
   transform: none;
+  border-color: white;
 }
 
 .toggle[aria-pressed='true']::before {
-  box-shadow: inset -6px -6px 0 0 black;
-  right: calc(100% - 20px);
-  left: auto;
-  border-color: transparent;
-  height: 14px;
-  width: 14px;
+  box-shadow: inset -16px -16px 0 0 white;
+  right: 2px;
+  height: 12px;
+  width: 12px;
 }
 
 .toggle[aria-pressed='true']::after {
-  left: calc(100% - 18px);
+  left: 2px;
   right: auto;
-  background-color: white;
-  border: 2px solid black;
+  background-color: black;
+  border: 2px solid white;
 }
