🖼️ Add buttons as images

--- a/structure/components/buttonwall.njk
+++ b/structure/components/buttonwall.njk
@@ -23,12 +23,6 @@
 		</li>
 		{# Others (mostly neocities and mastodon) #}
 		<li>
-			<a target="_blank" href="https://lostletters.neocities.org" class="buttonwall__item" style="font-size: 12px; background-color: #34072d; color: #ffc6ec;">lostletters</a>
-		</li>
-		<li>
-			<a target="_blank" href="https://thogreer.neocities.org" class="buttonwall__item" style="font-size: 14px; background-color: #0334a7; color: #fff;">thogreer</a>
-		</li>
-		<li>
 			<a target="_blank" href="https://jessicajournals.com" class="buttonwall__item" style="font-size: 10px; background-color: #1e1e2e; color: #A5E3A1; background-image: linear-gradient(to left, #181825, #1e1e2e)">jessica journals</a>
 		</li>
 		<li>
@@ -36,30 +30,6 @@
 		</li>
 		<li>
 			<a target="_blank" href="https://10kph.neocities.org" class="buttonwall__item" style="font-size: 14px; background-color: #1c1e26; color: #e95678;">10kph</a>
-		</li>
-		<li>
-			<a target="_blank" href="https://maria.town" class="buttonwall__item" style="font-size: 13px; background-color: #1f2d39; color: #96d1a0;">maria</a>
-		</li>
-		<li>
-			<a target="_blank" href="https://daintye.co" class="buttonwall__item" style="font-size: 13px; background-color: white; color: #ff9dc9;">dainty eco</a>
-		</li>
-		<li>
-			<a target="_blank" href="https://hillhouse.neocities.org" class="buttonwall__item" style="font-size: 13px; background-color: #ffccdd; color: #ab6c84;">hillhouse</a>
-		</li>
-		<li>
-			<a target="_blank" href="https://jasm1nii.xyz" class="buttonwall__item" style="font-size: 12px; background-color: #E6E6FA; color: #9370DB;">jasmine's journal</a>
-		</li>
-		<li>
-			<a target="_blank" href="https://pinkvampyr.neocities.org" class="buttonwall__item" style="font-size: 12px; background-color: #1C1C1C; color: #FF8FCB;">pinkvampyr</a>
-		</li>
-		<li>
-			<a target="_blank" href="https://sunosin.neocities.org" class="buttonwall__item" style="font-size: 12px; background-color: #ffd6d6; color: #188bc4;">lipu pi jan sunosin</a>
-		</li>
-		<li>
-			<a target="_blank" href="https://punkwasp.neocities.org" class="buttonwall__item" style="font-size: 13px; background-color: #454315; color: #ffd700;">punkwasp</a>
-		</li>
-		<li>
-			<a target="_blank" href="https://sneekrealm.neocities.org" class="buttonwall__item" style="font-size: 13px; background-color: #f0e5d2; color: #035F31;">realm of sneek</a>
 		</li>
 		{# Artists #}
 		<li>
@@ -79,6 +49,48 @@
 		</li>
 		<li>
 			<a target="_blank" href="https://www.pansy-shop.com" class="buttonwall__item" style="font-size: 16px; background-color: #ffe3e2; color: #220967;">pansy</a>
+		</li>
+	</ul>
+	<ul class="buttonwall">
+		<li>
+			<a href="https://hillhouse.neocities.org/">
+				<img src="/images/buttons/hillhouse.png" alt="Hillhouse">
+			</a>
+		</li>
+		<li>
+			<a href="https://jasm1nii.xyz/">
+				<img src="/images/buttons/jasmines_journal.png" alt="Jasmine's Journal">
+			</a>
+		</li>
+		<li>
+			<a href="https://lostletters.neocities.org/">
+				<img src="/images/buttons/lostletters.gif" alt="Lost Letters">
+			</a>
+		</li>
+		<li>
+			<a href="https://sunosin.neocities.org/">
+				<img src="/images/buttons/lipu_pi_jan_sunosin.png" alt="lipu pi jan sunosin">
+			</a>
+		</li>
+		<li>
+			<a href="https://maria.town/">
+				<img src="/images/buttons/marzka_cafe.png" alt="Maria">
+			</a>
+		</li>
+		<li>
+			<a href="https://pinkvampyr.neocities.org/">
+				<img src="/images/buttons/pinkvampyr.gif" alt="PinkVampyr">
+			</a>
+		</li>
+		<li>
+			<a href="https://punkwasp.neocities.org/">
+				<img src="/images/buttons/punkwasp.png" alt="PunkWasp">
+			</a>
+		</li>
+		<li>
+			<a href="https://sneekrealm.neocities.org/">
+				<img src="/images/buttons/sneekrealm.png" alt="Sneek Realm">
+			</a>
 		</li>
 	</ul>
 </section>
