--- a/content/about.njk
+++ b/content/about.njk
@@ -119,9 +119,8 @@ eleventyNavigation:
 		'
 	)}}
 
-	<h2>Elsewhere</h2>
+	<h2>Social</h2>
 	<ul class="unstyled">
-		<li><span class="emoji" role="img" aria-label="Bird">🐦</span> <a href="https://twitter.com/fri11s">@fri11s@twitter.com</a></li>
 		<li><span class="emoji" role="img" aria-label="Cat">😺</span> <a href="https://neocities.org/site/fri11s">@fri11s@neocities.org</a></li>
 		<li><span class="emoji" role="img" aria-label="Elephant">🐘</span> <a href="https://cutie.city/@frills">@frills@cutie.city</a></li>
 	</ul>
