--- a/structure/components/buttonwall.njk
+++ b/structure/components/buttonwall.njk
@@ -1,11 +1,6 @@
 <section>
-	<div class="reading-width">
-		<p>My take on the classic 88x31 button wall. No whizzy pics or blinkie gifs here, just colourful little boxes.</p>
-	</div>
-
-	<button id="toggleHighContrast" class="button mb-1" aria-pressed="false">Enable high contrast</button>
+	<h2>Friends</h2>
 	<ul class="buttonwall">
-		{# Friends #}
 		<li>
 			<a target="_blank" href="https://gothhoblin.me" class="buttonwall__item" style="font-size: 12px; background-color: #083820; color: #fff;">goth hoblin</a>
 		</li>
@@ -21,7 +16,60 @@
 		<li>
 			<a target="_blank" href="https://www.owain.codes/" class="buttonwall__item" style="font-size: 12px; background-color: #222831; color: #b6ff00;">owain.codes</a>
 		</li>
-		{# Others (mostly neocities and mastodon) #}
+	</ul>
+
+	<h2>Neighbours</h2>
+		<ul class="buttonwall">
+		<li class="buttonwall__image">
+			<a href="https://hillhouse.neocities.org/">
+				<img src="/images/buttons/hillhouse.png" alt="Hillhouse">
+			</a>
+		</li>
+		<li class="buttonwall__image">
+			<a href="https://jasm1nii.xyz/">
+				<img src="/images/buttons/jasmines_journal.png" alt="Jasmine's Journal">
+			</a>
+		</li>
+		<li class="buttonwall__image">
+			<a href="https://lostletters.neocities.org/">
+				<img src="/images/buttons/lostletters.gif" alt="Lost Letters">
+			</a>
+		</li>
+		<li class="buttonwall__image">
+			<a href="https://sunosin.neocities.org/">
+				<img src="/images/buttons/lipu_pi_jan_sunosin.png" alt="lipu pi jan sunosin">
+			</a>
+		</li>
+		<li class="buttonwall__image">
+			<a href="https://maria.town/">
+				<img src="/images/buttons/marzka_cafe.png" alt="Maria">
+			</a>
+		</li>
+		<li class="buttonwall__image">
+			<a href="https://maya.land/">
+				<img src="/images/buttons/maya_land.png" alt="Maya Land">
+			</a>
+		</li>
+		<li class="buttonwall__image">
+			<a href="https://melonking.net/">
+				<img src="/images/buttons/melonking.gif" alt="Melon King">
+			</a>
+		</li>
+		<li class="buttonwall__image">
+			<a href="https://pinkvampyr.neocities.org/">
+				<img src="/images/buttons/pinkvampyr.gif" alt="PinkVampyr">
+			</a>
+		</li>
+		<li class="buttonwall__image">
+			<a href="https://punkwasp.neocities.org/">
+				<img src="/images/buttons/punkwasp.png" alt="PunkWasp">
+			</a>
+		</li>
+		<li class="buttonwall__image">
+			<a href="https://sneekrealm.neocities.org/">
+				<img src="/images/buttons/sneekrealm.png" alt="Sneek Realm">
+			</a>
+		</li>
 		<li>
 			<a target="_blank" href="https://jessicajournals.com" class="buttonwall__item" style="font-size: 10px; background-color: #1e1e2e; color: #A5E3A1; background-image: linear-gradient(to left, #181825, #1e1e2e)">jessica journals</a>
 		</li>
@@ -31,6 +79,10 @@
 		<li>
 			<a target="_blank" href="https://10kph.neocities.org" class="buttonwall__item" style="font-size: 14px; background-color: #1c1e26; color: #e95678;">10kph</a>
 		</li>
+	</ul>
+
+	<h2>Creatives</h2>
+		<ul class="buttonwall">
 		{# Artists #}
 		<li>
 			<a target="_blank" href="https://www.furrylittlepeach.com" class="buttonwall__item" style="font-size: 12px; background-color: #f0490a; color: #fff;">furry little peach </a>
@@ -51,48 +103,7 @@
 			<a target="_blank" href="https://www.pansy-shop.com" class="buttonwall__item" style="font-size: 16px; background-color: #ffe3e2; color: #220967;">pansy</a>
 		</li>
 	</ul>
-	<ul class="buttonwall">
-		<li>
-			<a href="https://hillhouse.neocities.org/">
-				<img src="/images/buttons/hillhouse.png" alt="Hillhouse">
-			</a>
-		</li>
-		<li>
-			<a href="https://jasm1nii.xyz/">
-				<img src="/images/buttons/jasmines_journal.png" alt="Jasmine's Journal">
-			</a>
-		</li>
-		<li>
-			<a href="https://lostletters.neocities.org/">
-				<img src="/images/buttons/lostletters.gif" alt="Lost Letters">
-			</a>
-		</li>
-		<li>
-			<a href="https://sunosin.neocities.org/">
-				<img src="/images/buttons/lipu_pi_jan_sunosin.png" alt="lipu pi jan sunosin">
-			</a>
-		</li>
-		<li>
-			<a href="https://maria.town/">
-				<img src="/images/buttons/marzka_cafe.png" alt="Maria">
-			</a>
-		</li>
-		<li>
-			<a href="https://pinkvampyr.neocities.org/">
-				<img src="/images/buttons/pinkvampyr.gif" alt="PinkVampyr">
-			</a>
-		</li>
-		<li>
-			<a href="https://punkwasp.neocities.org/">
-				<img src="/images/buttons/punkwasp.png" alt="PunkWasp">
-			</a>
-		</li>
-		<li>
-			<a href="https://sneekrealm.neocities.org/">
-				<img src="/images/buttons/sneekrealm.png" alt="Sneek Realm">
-			</a>
-		</li>
-	</ul>
+	<button id="toggleHighContrast" class="button mb-1" aria-pressed="false">Enable high contrast</button>
 </section>
 
 {% block scripts %}
