--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,7 @@
 @import url('_logo.css');
 @import url('_toggle.css');
 @import url('_list.css');
+@import url('_buttonwall.css');
 
 img.rounded {
   border-radius: 1rem;
@@ -266,48 +267,6 @@ em {
   font-size: 90%;
 }
 
-/* Button wall */
-.buttonwall {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  gap: 1px;
-  list-style-type: none;
-  padding: 0;
-  margin: 0 0 2rem
-}
-
-.buttonwall.--highcontrast .buttonwall__item {
-  background: var(--bg) !important;
-  color: var(--text) !important;
-  box-shadow: inset 0 0 0 1px var(--text) !important;
-  text-decoration: underline !important
-}
-
-.buttonwall__item {
-  width: 80px;
-  height: 31px;
-  background: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  transition: transform .4s;
-  overflow: hidden;
-  word-break: break-word;
-  padding: 0 4px;
-  text-decoration: none;
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 1.1
-}
-
-.buttonwall__item:active,
-.buttonwall__item:focus,
-.buttonwall__item:hover {
-  text-decoration: none;
-  z-index: 1;
-}
 
 /* Webrings */
 .webrings {
