📃 Add status.cafe to Social list

--- a/content/about.njk
+++ b/content/about.njk
@@ -121,6 +121,7 @@ eleventyNavigation:
 
 	<h2>Social</h2>
 	<ul class="unstyled">
+		<li><span class="emoji" role="img" aria-label="Coffee">☕️</span> <a href="https://status.cafe/users/fri11s">@fri11s@status.cafe</a></li>
 		<li><span class="emoji" role="img" aria-label="Cat">😺</span> <a href="https://neocities.org/site/fri11s">@fri11s@neocities.org</a></li>
 		<li><span class="emoji" role="img" aria-label="Elephant">🐘</span> <a href="https://cutie.city/@frills">@frills@cutie.city</a></li>
 	</ul>
