--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,7 @@
 @import url('_typography.css');
 @import url('_utility.css');
 @import url('_button.css');
+@import url('_form.css');
 @import url('_logo.css');
 @import url('_toggle.css');
 @import url('_list.css');
