--- a/structure/components/buttonwall.njk
+++ b/structure/components/buttonwall.njk
@@ -81,8 +81,16 @@
 		</li>
 	</ul>
 
+	<h2>Tools & fun things</h2>
+	<ul class="buttonwall">
+		<li class="buttonwall__image">
+			<a href="https://wiby.me/">
+				<img src="/images/buttons/wiby.gif" alt="PunkWasp">
+			</a>
+		</li>
+	</ul>
 	<h2>Creatives</h2>
-		<ul class="buttonwall">
+	<ul class="buttonwall">
 		{# Artists #}
 		<li>
 			<a target="_blank" href="https://www.furrylittlepeach.com" class="buttonwall__item" style="font-size: 12px; background-color: #f0490a; color: #fff;">furry little peach </a>
